fix: load map on mobile even when it's not visible
So that we can query for the feature from a url param.

--- a/src/SidebarToggler.scss
+++ b/src/SidebarToggler.scss
@@ -17,6 +17,7 @@
       left: auto;
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0.25rem;
+      z-index: 2;
     }
     left: $sideBarWidth - 1px;
   }
